versions/0.9.0/_sources/refs/_aws-cdk_aws-batch.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"TbSmAX+ZJ0dMUHAmwXhiZcqFsHRqDLJesBDD5pjwbLs="}

@aws-cdk/aws-batch
==================

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.Batch/0.9.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.Batch" Version="0.9.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.Batch --version 0.9.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.Batch" version="0.9.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/batch/0.9.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:batch:jar:0.9.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="batch" rev="0.9.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>batch</artifactId>
           <version>0.9.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:batch:0.9.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='batch', version='0.9.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-batch/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-batch@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-batch": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-batch@0.9.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-batch/v/0.9.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-batch@0.9.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-batch": "^0.9.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-batch@0.9.0



.. mdinclude:: ./__aws-cdk_aws-batch.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-batch

ComputeEnvironmentArn
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ComputeEnvironmentArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.ComputeEnvironmentArn;

      .. code-tab:: javascript

         const { ComputeEnvironmentArn } = require('@aws-cdk/aws-batch');

      .. code-tab:: typescript

         import { ComputeEnvironmentArn } from '@aws-cdk/aws-batch';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

JobDefinitionArn
^^^^^^^^^^^^^^^^

.. py:class:: JobDefinitionArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.JobDefinitionArn;

      .. code-tab:: javascript

         const { JobDefinitionArn } = require('@aws-cdk/aws-batch');

      .. code-tab:: typescript

         import { JobDefinitionArn } from '@aws-cdk/aws-batch';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined

JobQueueArn
^^^^^^^^^^^

.. py:class:: JobQueueArn(valueOrFunction, [displayName])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.JobQueueArn;

      .. code-tab:: javascript

         const { JobQueueArn } = require('@aws-cdk/aws-batch');

      .. code-tab:: typescript

         import { JobQueueArn } from '@aws-cdk/aws-batch';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: What this token will evaluate to, literal or function.
   :type valueOrFunction: any
   :param displayName: A human-readable display hint for this Token
   :type displayName: string or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-batch.cloudformation

ComputeEnvironmentResource
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ComputeEnvironmentResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.cloudformation.ComputeEnvironmentResource;

      .. code-tab:: javascript

         const { cloudformation.ComputeEnvironmentResource } = require('@aws-cdk/aws-batch');

      .. code-tab:: typescript

         import { cloudformation.ComputeEnvironmentResource } from '@aws-cdk/aws-batch';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ComputeEnvironmentResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ComputeEnvironmentResource``
   :type properties: :py:class:`~@aws-cdk/aws-batch.cloudformation.ComputeEnvironmentResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-batch.ComputeEnvironmentArn` *(readonly)*

   .. py:class:: ComputeResourcesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.ComputeEnvironmentResource.ComputeResourcesProperty;

         .. code-tab:: javascript

            // cloudformation.ComputeEnvironmentResource.ComputeResourcesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ComputeEnvironmentResource.ComputeResourcesProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: instanceRole

         ``ComputeEnvironmentResource.ComputeResourcesProperty.InstanceRole``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-instancerole


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: instanceTypes

         ``ComputeEnvironmentResource.ComputeResourcesProperty.InstanceTypes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-instancetypes


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


      .. py:attribute:: maxvCpus

         ``ComputeEnvironmentResource.ComputeResourcesProperty.MaxvCpus``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-maxvcpus


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: minvCpus

         ``ComputeEnvironmentResource.ComputeResourcesProperty.MinvCpus``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-minvcpus


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: securityGroupIds

         ``ComputeEnvironmentResource.ComputeResourcesProperty.SecurityGroupIds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-securitygroupids


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


      .. py:attribute:: subnets

         ``ComputeEnvironmentResource.ComputeResourcesProperty.Subnets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-subnets


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[]


      .. py:attribute:: type

         ``ComputeEnvironmentResource.ComputeResourcesProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-type


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: bidPercentage

         ``ComputeEnvironmentResource.ComputeResourcesProperty.BidPercentage``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-bidpercentage


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: desiredvCpus

         ``ComputeEnvironmentResource.ComputeResourcesProperty.DesiredvCpus``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-desiredvcpus


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: ec2KeyPair

         ``ComputeEnvironmentResource.ComputeResourcesProperty.Ec2KeyPair``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-ec2keypair


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: imageId

         ``ComputeEnvironmentResource.ComputeResourcesProperty.ImageId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-imageid


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: spotIamFleetRole

         ``ComputeEnvironmentResource.ComputeResourcesProperty.SpotIamFleetRole``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-spotiamfleetrole


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: tags

         ``ComputeEnvironmentResource.ComputeResourcesProperty.Tags``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-computeenvironment-computeresources.html#cfn-batch-computeenvironment-computeresources-tags


         :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



ComputeEnvironmentResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ComputeEnvironmentResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.cloudformation.ComputeEnvironmentResourceProps;

      .. code-tab:: javascript

         // cloudformation.ComputeEnvironmentResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ComputeEnvironmentResourceProps } from '@aws-cdk/aws-batch';





   .. py:attribute:: serviceRole

      ``AWS::Batch::ComputeEnvironment.ServiceRole``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-computeenvironment.html#cfn-batch-computeenvironment-servicerole


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: type

      ``AWS::Batch::ComputeEnvironment.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-computeenvironment.html#cfn-batch-computeenvironment-type


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: computeEnvironmentName

      ``AWS::Batch::ComputeEnvironment.ComputeEnvironmentName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-computeenvironment.html#cfn-batch-computeenvironment-computeenvironmentname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: computeResources

      ``AWS::Batch::ComputeEnvironment.ComputeResources``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-computeenvironment.html#cfn-batch-computeenvironment-computeresources


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.ComputeEnvironmentResource.ComputeResourcesProperty` or undefined


   .. py:attribute:: state

      ``AWS::Batch::ComputeEnvironment.State``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-computeenvironment.html#cfn-batch-computeenvironment-state


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


JobDefinitionResource
~~~~~~~~~~~~~~~~~~~~~

.. py:class:: JobDefinitionResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource;

      .. code-tab:: javascript

         const { cloudformation.JobDefinitionResource } = require('@aws-cdk/aws-batch');

      .. code-tab:: typescript

         import { cloudformation.JobDefinitionResource } from '@aws-cdk/aws-batch';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``JobDefinitionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``JobDefinitionResource``
   :type properties: :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-batch.JobDefinitionArn` *(readonly)*

   .. py:class:: ContainerPropertiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.ContainerPropertiesProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.ContainerPropertiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.ContainerPropertiesProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: image

         ``JobDefinitionResource.ContainerPropertiesProperty.Image``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-image


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: memory

         ``JobDefinitionResource.ContainerPropertiesProperty.Memory``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-memory


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: vcpus

         ``JobDefinitionResource.ContainerPropertiesProperty.Vcpus``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-vcpus


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: command

         ``JobDefinitionResource.ContainerPropertiesProperty.Command``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-command


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (string or :py:class:`@aws-cdk/cdk.CloudFormationToken`)[] or undefined


      .. py:attribute:: environment

         ``JobDefinitionResource.ContainerPropertiesProperty.Environment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-environment


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.EnvironmentProperty`)[] or undefined


      .. py:attribute:: jobRoleArn

         ``JobDefinitionResource.ContainerPropertiesProperty.JobRoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-jobrolearn


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: mountPoints

         ``JobDefinitionResource.ContainerPropertiesProperty.MountPoints``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-mountpoints


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.MountPointsProperty`)[] or undefined


      .. py:attribute:: privileged

         ``JobDefinitionResource.ContainerPropertiesProperty.Privileged``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-privileged


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: readonlyRootFilesystem

         ``JobDefinitionResource.ContainerPropertiesProperty.ReadonlyRootFilesystem``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-readonlyrootfilesystem


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: ulimits

         ``JobDefinitionResource.ContainerPropertiesProperty.Ulimits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-ulimits


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.UlimitProperty`)[] or undefined


      .. py:attribute:: user

         ``JobDefinitionResource.ContainerPropertiesProperty.User``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-user


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: volumes

         ``JobDefinitionResource.ContainerPropertiesProperty.Volumes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-containerproperties.html#cfn-batch-jobdefinition-containerproperties-volumes


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.VolumesProperty`)[] or undefined


   .. py:class:: EnvironmentProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.EnvironmentProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.EnvironmentProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.EnvironmentProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: name

         ``JobDefinitionResource.EnvironmentProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-environment.html#cfn-batch-jobdefinition-environment-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: value

         ``JobDefinitionResource.EnvironmentProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-environment.html#cfn-batch-jobdefinition-environment-value


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: MountPointsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.MountPointsProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.MountPointsProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.MountPointsProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: containerPath

         ``JobDefinitionResource.MountPointsProperty.ContainerPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-mountpoints.html#cfn-batch-jobdefinition-mountpoints-containerpath


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: readOnly

         ``JobDefinitionResource.MountPointsProperty.ReadOnly``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-mountpoints.html#cfn-batch-jobdefinition-mountpoints-readonly


         :type: boolean or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


      .. py:attribute:: sourceVolume

         ``JobDefinitionResource.MountPointsProperty.SourceVolume``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-mountpoints.html#cfn-batch-jobdefinition-mountpoints-sourcevolume


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: RetryStrategyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.RetryStrategyProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.RetryStrategyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.RetryStrategyProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: attempts

         ``JobDefinitionResource.RetryStrategyProperty.Attempts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-retrystrategy.html#cfn-batch-jobdefinition-retrystrategy-attempts


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: TimeoutProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.TimeoutProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.TimeoutProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.TimeoutProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: attemptDurationSeconds

         ``JobDefinitionResource.TimeoutProperty.AttemptDurationSeconds``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-timeout.html#cfn-batch-jobdefinition-timeout-attemptdurationseconds


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: UlimitProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.UlimitProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.UlimitProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.UlimitProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: hardLimit

         ``JobDefinitionResource.UlimitProperty.HardLimit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-ulimit.html#cfn-batch-jobdefinition-ulimit-hardlimit


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: name

         ``JobDefinitionResource.UlimitProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-ulimit.html#cfn-batch-jobdefinition-ulimit-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: softLimit

         ``JobDefinitionResource.UlimitProperty.SoftLimit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-ulimit.html#cfn-batch-jobdefinition-ulimit-softlimit


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:class:: VolumesHostProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.VolumesHostProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.VolumesHostProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.VolumesHostProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: sourcePath

         ``JobDefinitionResource.VolumesHostProperty.SourcePath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-volumeshost.html#cfn-batch-jobdefinition-volumeshost-sourcepath


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:class:: VolumesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResource.VolumesProperty;

         .. code-tab:: javascript

            // cloudformation.JobDefinitionResource.VolumesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobDefinitionResource.VolumesProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: host

         ``JobDefinitionResource.VolumesProperty.Host``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-volumes.html#cfn-batch-jobdefinition-volumes-host


         :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.VolumesHostProperty` or undefined


      .. py:attribute:: name

         ``JobDefinitionResource.VolumesProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobdefinition-volumes.html#cfn-batch-jobdefinition-volumes-name


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



JobDefinitionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: JobDefinitionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.cloudformation.JobDefinitionResourceProps;

      .. code-tab:: javascript

         // cloudformation.JobDefinitionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.JobDefinitionResourceProps } from '@aws-cdk/aws-batch';





   .. py:attribute:: containerProperties

      ``AWS::Batch::JobDefinition.ContainerProperties``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobdefinition.html#cfn-batch-jobdefinition-containerproperties


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.ContainerPropertiesProperty`


   .. py:attribute:: type

      ``AWS::Batch::JobDefinition.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobdefinition.html#cfn-batch-jobdefinition-type


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: jobDefinitionName

      ``AWS::Batch::JobDefinition.JobDefinitionName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobdefinition.html#cfn-batch-jobdefinition-jobdefinitionname


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: parameters

      ``AWS::Batch::JobDefinition.Parameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobdefinition.html#cfn-batch-jobdefinition-parameters


      :type: json or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: retryStrategy

      ``AWS::Batch::JobDefinition.RetryStrategy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobdefinition.html#cfn-batch-jobdefinition-retrystrategy


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.RetryStrategyProperty` or undefined


   .. py:attribute:: timeout

      ``AWS::Batch::JobDefinition.Timeout``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobdefinition.html#cfn-batch-jobdefinition-timeout


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobDefinitionResource.TimeoutProperty` or undefined


JobQueueResource
~~~~~~~~~~~~~~~~

.. py:class:: JobQueueResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.cloudformation.JobQueueResource;

      .. code-tab:: javascript

         const { cloudformation.JobQueueResource } = require('@aws-cdk/aws-batch');

      .. code-tab:: typescript

         import { cloudformation.JobQueueResource } from '@aws-cdk/aws-batch';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``JobQueueResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``JobQueueResource``
   :type properties: :py:class:`~@aws-cdk/aws-batch.cloudformation.JobQueueResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: ref

      :type: :py:class:`~@aws-cdk/aws-batch.JobQueueArn` *(readonly)*

   .. py:class:: ComputeEnvironmentOrderProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.Batch;

         .. code-tab:: java

            import software.amazon.awscdk.services.batch.cloudformation.JobQueueResource.ComputeEnvironmentOrderProperty;

         .. code-tab:: javascript

            // cloudformation.JobQueueResource.ComputeEnvironmentOrderProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.JobQueueResource.ComputeEnvironmentOrderProperty } from '@aws-cdk/aws-batch';





      .. py:attribute:: computeEnvironment

         ``JobQueueResource.ComputeEnvironmentOrderProperty.ComputeEnvironment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobqueue-computeenvironmentorder.html#cfn-batch-jobqueue-computeenvironmentorder-computeenvironment


         :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken`


      .. py:attribute:: order

         ``JobQueueResource.ComputeEnvironmentOrderProperty.Order``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-batch-jobqueue-computeenvironmentorder.html#cfn-batch-jobqueue-computeenvironmentorder-order


         :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`



JobQueueResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: JobQueueResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.Batch;

      .. code-tab:: java

         import software.amazon.awscdk.services.batch.cloudformation.JobQueueResourceProps;

      .. code-tab:: javascript

         // cloudformation.JobQueueResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.JobQueueResourceProps } from '@aws-cdk/aws-batch';





   .. py:attribute:: computeEnvironmentOrder

      ``AWS::Batch::JobQueue.ComputeEnvironmentOrder``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobqueue.html#cfn-batch-jobqueue-computeenvironmentorder


      :type: :py:class:`@aws-cdk/cdk.CloudFormationToken` or (:py:class:`@aws-cdk/cdk.CloudFormationToken` or :py:class:`~@aws-cdk/aws-batch.cloudformation.JobQueueResource.ComputeEnvironmentOrderProperty`)[]


   .. py:attribute:: priority

      ``AWS::Batch::JobQueue.Priority``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobqueue.html#cfn-batch-jobqueue-priority


      :type: number or :py:class:`@aws-cdk/cdk.CloudFormationToken`


   .. py:attribute:: jobQueueName

      ``AWS::Batch::JobQueue.JobQueueName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobqueue.html#cfn-batch-jobqueue-jobqueuename


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined


   .. py:attribute:: state

      ``AWS::Batch::JobQueue.State``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-batch-jobqueue.html#cfn-batch-jobqueue-state


      :type: string or :py:class:`@aws-cdk/cdk.CloudFormationToken` or undefined



.. py:currentmodule:: @aws-cdk/aws-batch

